meta tag update

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>DeFi operating system for investment professionals | Rivera Money</title>
+    <title>Rivera - Transforming Market Making</title>
     <meta name="description"
-    content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
-    <meta property="og:title" content="DeFi operating system for investment professionals | Rivera Money">
+    content="A permissionless liquidity management protocol that facilitates risk-shared market-making in DeFi.">
+    <meta property="og:title" content="Rivera - Transforming Market Making">
     <meta property="og:description"
-        content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
+        content="A permissionless liquidity management protocol that facilitates risk-shared market-making in DeFi.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
@@ -286,22 +286,22 @@
                     <!-- <button type="submit" name="submit2"   class="btn btn-default btn-radius content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
                     </button> -->
-                    <button type="submit" name="submit2"  class="btn btn-default btn-radius content-popup" onclick="window.open('https://discord.com/invite/sbMxwS6VEV', '_blank')">
+                    <button type="submit" name="submit2"  class="btn btn-default btn-radius content-popup" onclick="window.open('https://testnet.rivera.money/', '_blank')">
                       <!-- <img src="https://em-content.zobj.net/source/microsoft-teams/363/rocket_1f680.png">  -->
-                      Coming Soon
+                      Launch Testnet
                     </button>
                   </div>
                   </div>
-                  <div class="btn_group pb-3">
+                  <!-- <div class="btn_group pb-3">
                     
                     <div >
                     <button type="submit" name="submit2"   class="btn gray_button btn-radius content-popup" onclick="window.open('https://discord.com/invite/sbMxwS6VEV', '_blank')">
                       <img src="https://em-content.zobj.net/source/microsoft-teams/363/rocket_1f680.png" style="    width: 25px;
                       margin-right: 5px;">
-                      Get whitelisted to join Testnet  -->
+                      Get whitelisted to join Testnet 
                     </button>
                   </div>
-                  </div>
+                  </div> -->
               </div>
           </div>
       </div>
