--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-4" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
-                    Transforming Market-Making
+                    Liquidity Infrastructure for Concentrated DEXs
                     <!-- <br> -->
                     <!-- for investment professionals -->
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white fnt_18">
-                    Next-gen ALM to unlock risk-shared liquidity in DeFi. 
+                    <!-- Next-gen ALM to unlock risk-shared liquidity in DeFi.  -->
                   </p>
                   <div class="btn_group pb-3">
                     <!-- <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
