--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="custom-container">
         <nav class="navbar navbar-expand-lg">
           <a
-            class="navbar-brand page-scroll animation"
+            class="navbar-brand page-scroll"
             href="/"
             data-animation="fadeInDown"
             data-animation-delay="1s"
