home page modify

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -281,7 +281,7 @@
             data-animation-delay="2s"
           >
           <div class="mt_4_neg">
-          <button class="marketMakingBtn pddng_4" style="cursor: pointer;" onclick="window.open('https://testnet.rivera.money/', '_blank')">Launch Testnet</button>
+          <button class="marketMakingBtn marketMakingBtnHvr pddng_4" style="cursor: pointer;" onclick="window.open('https://testnet.rivera.money/', '_blank')">Launch Testnet</button>
         </div>
         </li>
             
@@ -414,21 +414,21 @@
               <img src="/assets/images/marketMaking1.png">
               <div class="update_header_font mb-3 mt-3">Market Adaptive Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Exotic ranges to capture maximum fees, elastically managed as per the market volatility</div>
-              <div class="mb-3"><button class="btn marketMakingBtn">Invest Now</button></div>
+              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/yellowBg.png)">
               <div class="yellowBox">Institutions</div>
               <img src="/assets/images/marketMaking2.png">
               <div class="update_header_font mb-3 mt-3">Steady Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Distributed ranges with high volatility margin, designed to minimize impermanent loss </div>
-              <div class="mb-3"><button class="btn marketMakingBtn">Invest Now</button></div>
+              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/greenBg.png)">
               <div class="greenBox">Conservative</div>
               <img src="/assets/images/marketMaking3.png" class="marketMaking3ImgWdth mt_48">
               <div class="update_header_font mb-3 mt-3">Stable Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Market-making for the pegged asset pairs, volatility protection in high-risk markets</div>
-              <div class="mb-3"><button class="btn marketMakingBtn">Invest Now</button></div>
+              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
           </div>
 
@@ -749,9 +749,10 @@
     <footer>
       <div class="top_footer bg_light_dark">
         <div class="custom-container-footer">
-          <div class="text-center mb-4">contact@rivera.money</div>
+          <div class="text-center mb-4 contct_btn">contact@rivera.money</div>
           <div class="row" style="justify-content: space-between;    align-items: center;">
             <div class="col-lg-4 col-md-12">
+              <div class="footer_font mb-2">Subscribe to our Newsletter</div>
               <div
                 class="footer_logo"
               >
