font size update

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -519,7 +519,7 @@
 
           <div class="marketMakingBox ecosystem_back mb-5">
             <div class="pddng_30_45">
-              <div class="update_header_font mb-2">Concentrated DEX</div>
+              <div class="update_header_font mb-2 fnt_600">Concentrated DEX</div>
               <div>
                 <ul class="ecosystemList marketMakingSubHeader">
                   <li>We enable deep liquidity for your pools by actively rebalancing funds in “price-action” zone
@@ -545,7 +545,7 @@
 
           <div class="marketMakingBox ecosystem_back mb-5">
             <div class="pddng_30_45">
-              <div class="update_header_font mb-2">DeFi Builder</div>
+              <div class="update_header_font mb-2 fnt_600">DeFi Builder</div>
               <div>
                 <ul class="ecosystemList marketMakingSubHeader">
                   <li>Build structured offerings and powerful trading strategies for users of different risk profiles
@@ -571,7 +571,7 @@
          
           <div class="marketMakingBox ecosystem_back">
             <div class="pddng_30_45">
-              <div class="update_header_font mb-2">Asset Manager</div>
+              <div class="update_header_font mb-2 fnt_600">Asset Manager</div>
               <div>
                 <ul class="ecosystemList marketMakingSubHeader">
                   <li>Launch non-custodial market-making vaults personalized for your institutional clients needs
