font size fix for mobile view

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -412,21 +412,21 @@
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/redBg.png)">
               <div class="redBox">Degens</div>
               <img src="/assets/images/marketMaking1.png">
-              <div class="update_header_font mb-3 mt-3">Market Adaptive Strategy</div>
+              <div class="update_header_font mb-3 mt-3 fnt_600">Market Adaptive Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Exotic ranges to capture maximum fees, elastically managed as per the market volatility</div>
               <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/yellowBg.png)">
               <div class="yellowBox">Institutions</div>
               <img src="/assets/images/marketMaking2.png">
-              <div class="update_header_font mb-3 mt-3">Steady Spread Strategy</div>
+              <div class="update_header_font mb-3 mt-3 fnt_600">Steady Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Distributed ranges with high volatility margin, designed to minimize impermanent loss </div>
               <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/greenBg.png)">
               <div class="greenBox">Conservative</div>
               <img src="/assets/images/marketMaking3.png" class="marketMaking3ImgWdth mt_48">
-              <div class="update_header_font mb-3 mt-3">Stable Spread Strategy</div>
+              <div class="update_header_font mb-3 mt-3 fnt_600">Stable Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader">Market-making for the pegged asset pairs, volatility protection in high-risk markets</div>
               <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr">Invest Now</button></div>
             </div>
@@ -465,17 +465,17 @@
               <div class="marketMakingBox">
                 <div class="marketMakingInnerBox gray_bg">
                   <img src="/assets/images/liquidity1.svg" class="wdth_width_150 mb-2 mt-2">
-                  <div class="update_header_font mb-2 mt-3">DeFi Composable Positions</div>
+                  <div class="update_header_font mb-2 mt-3 fnt_600">DeFi Composable Positions</div>
                   <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Unlock liquidity on your investment positions or invest in structured strategies.</div>
                 </div>
                 <div class="marketMakingInnerBox gray_bg">
                   <img src="/assets/images/liquidity2.svg" class="wdth_height_90 mb-2 mt-2">
-                  <div class="update_header_font mb-2 mt-3">Passive LP Expereince</div>
+                  <div class="update_header_font mb-2 mt-3 fnt_600">Passive LP Expereince</div>
                   <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Liquidity ranges are managed for you, and the earnings are compounded.</div>
                 </div>
                 <div class="marketMakingInnerBox gray_bg">
                   <img src="/assets/images/liquidity3.svg" class="wdth_height_90 mb-2 mt-2">
-                  <div class="update_header_font mb-2 mt-3">Liquidity Mining Programs</div>
+                  <div class="update_header_font mb-2 mt-3 fnt_600">Liquidity Mining Programs</div>
                   <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Participate in liquidity mining programs and earn additional APY from rewards</div>
                 </div>
               </div>
@@ -605,7 +605,7 @@
        <section class="small_pt mrgn_top_mbl">
         <div class="custom-container">
           <div class="col-lg-8 col-md-8" style="margin-left: auto;margin-right: auto;">
-            <h1 class="section_subheader text-center section_subheader_res mb_60">
+            <h1 class="section_subheader text-center section_subheader_res">
               Partners & Recognitions
             </h1>
             <!-- <p class="mobile_vault_hero-para px-0 text-white text-center">
@@ -622,15 +622,15 @@
            
           </div>
   
-          <div class="d-flex" style="align-items: center;justify-content: center;">
+          <div class="d-flex mbNeg25_mob" style="align-items: center;justify-content: center;">
             <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
             <div style="padding: 20px;"><img  src="/assets/images/swingv2.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/ardav2.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/cashaav2.svg" style="cursor: pointer;"></div>
-            <div style="padding: 20px;"><img  src="/assets/images/earthv2.svg" style="cursor: pointer;"></div>
+            <div style="padding: 20px;"><img  src="/assets/images/earthv2.png" style="cursor: pointer;"></div>
           </div>
 
-          <div class="d-flex" style="align-items: center;justify-content: center;">
+          <div class="d-flex mbNeg25_mob" style="align-items: center;justify-content: center;">
             <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
             <div style="padding: 20px;"><img src="/assets/images/agni.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/fusionXv2.svg" style="cursor: pointer;"></div>
