font update news update section

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -361,31 +361,31 @@
                   <div class="swiper-container explore_cards_swiper">
                       <div class="swiper-wrapper">
                           <a href="https://medium.com/rivera-money/%EF%B8%8Ftitans-of-rivera-%EF%B8%8F-exclusive-100-nfts-for-the-top-ogs-bff2a40332d9" target="_blank" class="swiper-slide explore_cards-each text-dark">
-                              <div class="news_update_header_font">Launching “Titans of Rivera” OG NFT Badges</div>
+                              <div class="news_update_header_font">Launching “Titans of Rivera” </br> OG NFT Badges</div>
                               <div class="explore_more_pos">
                                 <div><img src="/assets/images/arrow.svg" /></div>
-                                <div><img src="/assets/images/newsUpdate1.png" class="height_130" /></div>
+                                <div><img src="/assets/images/newsUpdate1.png" class="height_110" /></div>
                               </div>
                           </a>
                           <a href="https://medium.com/rivera-money/rivera-liquidity-infrastructure-for-mantle-ab44ef2f39dc" target="_blank" class="swiper-slide explore_cards-each text-dark">
-                            <div class="news_update_header_font">Strategic partnership with Mantle Network</div>
+                            <div class="news_update_header_font">Strategic partnership with </br> Mantle Network</div>
                             <div class="explore_more_pos">
                               <div><img src="/assets/images/arrow.svg" /></div>
-                              <div><img src="/assets/images/newsUpdate2.png" class="height_130" /></div>
+                              <div><img src="/assets/images/newsUpdate2.png" class="height_110" /></div>
                             </div>
                           </a>
                           <a href="https://medium.com/rivera-money/awarded-uniswap-bounty-for-innovating-structured-products-on-concentrated-lp-pools-83c6f2b79632" target="_blank" class="swiper-slide explore_cards-each text-dark">
-                            <div class="news_update_header_font">Rivera is awarded Uniswap innovation bounty</div>
+                            <div class="news_update_header_font">Rivera is awarded Uniswap </br> innovation bounty</div>
                             <div class="explore_more_pos">
                               <div><img src="/assets/images/arrow.svg" /></div>
-                              <div><img src="/assets/images/update2.svg" class="height_130" /></div>
+                              <div><img src="/assets/images/update2.svg" class="height_110" /></div>
                             </div>
                           </a>
                           <a href="https://medium.com/rivera-money/incentivized-testnet-launch-powered-by-mantle-network-920a0d24b19a" target="_blank" class="swiper-slide explore_cards-each text-dark">
-                            <div class="news_update_header_font">Rivera Incentivized Testnet is Live</div>
+                            <div class="news_update_header_font">Rivera Incentivized Testnet </br> is Live</div>
                             <div class="explore_more_pos">
                               <div><img src="/assets/images/arrow.svg" /></div>
-                              <div><img src="/assets/images/newsUpdate4.png" class="height_130" /></div>
+                              <div><img src="/assets/images/newsUpdate4.png" class="height_110" /></div>
                             </div>
                           </a>
                       </div>
