demo home page update spacing update

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -411,14 +411,14 @@
               <div class="redBox">Degens</div>
               <img src="/assets/images/marketMaking1.png" style="margin-top: 50px;">
               <div class="update_header_font mb-3 mt-3 fnt_600">Market Adaptive Strategy</div>
-              <div class="mb-4 marketMakingSubHeader">Exotic ranges to capture maximum fees, elastically managed as per the market volatility</div>
+              <div class="mb-4 marketMakingSubHeader fnt_wght_100">Exotic ranges to capture maximum fees, elastically managed as per the market volatility</div>
               <div class="mb-3"><button class="btn marketMakingBtn" disabled>Coming Soon</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/yellowBg.png)">
               <div class="yellowBox">Institutions</div>
               <img src="/assets/images/marketMaking2.png" style="margin-top: 50px;">
               <div class="update_header_font mb-3 mt-3 fnt_600">Steady Spread Strategy</div>
-              <div class="mb-4 marketMakingSubHeader">Distributed ranges with high volatility margin, designed to minimize impermanent loss </div>
+              <div class="mb-4 marketMakingSubHeader fnt_wght_100">Distributed ranges with high volatility margin, designed to minimize impermanent loss </div>
               <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://testnet.rivera.money/', '_blank')">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/greenBg.png)">
@@ -426,7 +426,7 @@
               <img src="/assets/images/marketMaking3.png" class="marketMaking3ImgWdth mt_48" style="margin-top: 65px;
               margin-bottom: 35px;">
               <div class="update_header_font mb-3 mt-3 fnt_600">Stable Spread Strategy</div>
-              <div class="mb-4 marketMakingSubHeader">Market-making for the pegged asset pairs, volatility protection in high-risk markets</div>
+              <div class="mb-4 marketMakingSubHeader fnt_wght_100">Market-making for the pegged asset pairs, volatility protection in high-risk markets</div>
               <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://testnet.rivera.money/', '_blank')">Invest Now</button></div>
             </div>
           </div>
@@ -468,17 +468,17 @@
                 <div class="marketMakingInnerBoxConcentrated gray_bg">
                   <img src="/assets/images/liquidity1.svg" class="wdth_width_150 mb-3 mt-2">
                   <div class="update_header_font mb-2 mt-3 fnt_600">DeFi Composable Positions</div>
-                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Unlock liquidity on your investment positions or invest in structured strategies.</div>
+                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3 fnt_wght_100">Unlock liquidity on your investment positions or invest in structured strategies.</div>
                 </div>
                 <div class="marketMakingInnerBoxConcentrated gray_bg">
                   <img src="/assets/images/liquidity2.svg" class="wdth_height_90 mb-3 mt-2">
                   <div class="update_header_font mb-2 mt-3 fnt_600">Passive LP Expereince</div>
-                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Liquidity ranges are managed for you, and the earnings are compounded.</div>
+                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3 fnt_wght_100">Liquidity ranges are managed for you, and the earnings are compounded.</div>
                 </div>
                 <div class="marketMakingInnerBoxConcentrated gray_bg">
                   <img src="/assets/images/liquidity3.svg" class="wdth_height_90 mb-3 mt-2">
                   <div class="update_header_font mb-2 mt-3 fnt_600">Liquidity Mining Programs</div>
-                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3">Participate in liquidity mining programs and earn additional APY from rewards</div>
+                  <div class="lh_1 marketMakingSubHeader mb-3 mt-3 fnt_wght_100">Participate in liquidity mining programs and earn additional APY from rewards</div>
                 </div>
               </div>
             </div>
@@ -523,7 +523,7 @@
             <div class="pddng_30_45">
               <div class="update_header_font mb-2 fnt_600">Concentrated DEX</div>
               <div>
-                <ul class="ecosystemList marketMakingSubHeader">
+                <ul class="ecosystemList marketMakingSubHeader fnt_wght_100">
                   <li>We enable deep liquidity for your pools by actively rebalancing funds in “price-action” zone
                     </li>
                   <li>Convert your LP positions composable & source more liquidity with innoavtive DeFi products
@@ -549,7 +549,7 @@
             <div class="pddng_30_45">
               <div class="update_header_font mb-2 fnt_600">DeFi Builder</div>
               <div>
-                <ul class="ecosystemList marketMakingSubHeader">
+                <ul class="ecosystemList marketMakingSubHeader fnt_wght_100">
                   <li>Build structured offerings and powerful trading strategies for users of different risk profiles
                     </li>
                   <li>Easily integrate concentrated pools in your DeFi product with our ERC-20 based yield tokens
@@ -575,7 +575,7 @@
             <div class="pddng_30_45">
               <div class="update_header_font mb-2 fnt_600">Asset Manager</div>
               <div>
-                <ul class="ecosystemList marketMakingSubHeader">
+                <ul class="ecosystemList marketMakingSubHeader fnt_wght_100">
                   <li>Launch non-custodial market-making vaults personalized for your institutional clients needs
                     </li>
                   <li>Codeless strategy management, automatic fee collection, whitelisted vaults for KYC’d users
@@ -633,7 +633,7 @@
             <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
             <div style="padding: 20px;"><img src="/assets/images/agni.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/fusionXv2.svg" style="cursor: pointer;"></div>
-            <div style="padding: 20px;"><img src="/assets/images/lendle.svg" style="cursor: pointer;"></div>
+            <div style="padding: 20px;"><img src="/assets/images/magma.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/mantleswap.svg" style="width:200px;cursor: pointer;"></div>
            
           </div>
@@ -672,7 +672,7 @@
           <div class="d-flex mbNeg25" style="justify-content: center;align-items: center;">
             <div style="padding: 20px;"><img src="/assets/images/agni.svg" style="cursor: pointer;"></div>
             <div style="padding: 20px;"><img  src="/assets/images/fusionXv2.svg" style="cursor: pointer;"></div>
-            <div style="padding: 20px;"><img src="/assets/images/lendle.svg" style="cursor: pointer;"></div>
+            <div style="padding: 20px;"><img src="/assets/images/magma.svg" style="cursor: pointer;"></div>
           </div>
 
           <div class="d-flex mbNeg25" style="justify-content: center;align-items: center;">
@@ -796,7 +796,7 @@
               <form class="early_access_form" id="early_access_form_submit">
                 <div class="d-flex"> <input
                   type="email"
-                  class="form-control bck_trans"
+                  class="form-control bck_trans emailBoxWdth"
                   id="early_access_mail"
                   placeholder="Your Email"
                   required
@@ -804,7 +804,12 @@
                 <button type="submit" name="submit2"  class="ftr_btn">
                   Subscribe
                 </button></div>
-               <div id="subcription">Thank you for subscribing.</div>
+               <div id="subcription" style="color: #8AD86C;
+               margin-top: 18px;">
+                <img src="/assets/images/clickGreen.svg" style="    width: 27px;
+                margin-bottom: 2px;
+                margin-right: 2px;">
+                Thank you for subscribing.</div>
               </form>
 
               <!-- <a href="https://ethermail.io/community/rivera-money" target="_blank" class="page-scroll" >
@@ -830,7 +835,7 @@
           </div>
         </div>
         <div class="text-center" style="font-size: 14px;margin-top: 40px;">
-            <span>Copyright © 2023 | Rivera Money | All rights reserved</span>
+            <span class="fnt_wght_100">Copyright © 2023 | Rivera Money | All rights reserved</span>
         </div>
       </div>
 
