--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             data-animation-delay="2s"
           >
           <div class="mt_4_neg">
-          <button class="marketMakingBtn marketMakingBtnHvr pddng_4" style="cursor: pointer;" onclick="window.open('https://testnet.rivera.money/', '_blank')">Launch Testnet</button>
+          <button class="marketMakingBtn marketMakingBtnHvr pddng_4" style="cursor: pointer;" onclick="window.open('https://app.rivera.money/', '_blank')">Launch Mainnet</button>
         </div>
         </li>
             
@@ -317,9 +317,9 @@
                     <!-- <button type="submit" name="submit2"   class="btn btn-default btn-radius content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
                     </button> -->
-                    <button type="submit" name="submit2"  class="btn btn-default content-popup min_200" onclick="window.open('https://testnet.rivera.money/', '_blank')">
+                    <button type="submit" name="submit2"  class="btn btn-default content-popup min_200" onclick="window.open('https://app.rivera.money/', '_blank')">
                       <!-- <img src="https://em-content.zobj.net/source/microsoft-teams/363/rocket_1f680.png">  -->
-                      Launch Testnet
+                      Launch Mainnet
                     </button>
                   </div>
                   </div>
@@ -496,7 +496,7 @@
             <div>
             <div class="section_vault_subheader mb-3">Get started with concentrated market-making</div>
             <div class="launch_btn_pos">
-              <div class="launch_btn_pdng"><button class="btn color_snd" onclick="window.open('https://testnet.rivera.money/', '_blank')">Launch App</button></div>
+              <div class="launch_btn_pdng"><button class="btn color_snd" onclick="window.open('https://app.rivera.money/', '_blank')">Launch App</button></div>
               <div class="launch_btn_pdng"><button class="btn marketMakingBtn" onclick="window.open('https://discord.com/invite/sbMxwS6VEV', '_blank')"><img src="/assets/images/discord.svg" /> Join Discord</button></div>
             </div>
             </div>
