invest now link update

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <img src="/assets/images/marketMaking2.png" style="margin-top: 50px;">
               <div class="update_header_font mb-3 mt-3 fnt_600">Steady Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader fnt_wght_100">Distributed ranges with high volatility margin, designed to minimize impermanent loss </div>
-              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://testnet.rivera.money/', '_blank')">Invest Now</button></div>
+              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://app.rivera.money/', '_blank')">Invest Now</button></div>
             </div>
             <div class="marketMakingInnerBox" style="background-image: url(/assets/images/greenBg.png)">
               <div class="greenBox">Conservative</div>
@@ -428,7 +428,7 @@
               margin-bottom: 35px;">
               <div class="update_header_font mb-3 mt-3 fnt_600">Stable Spread Strategy</div>
               <div class="mb-4 marketMakingSubHeader fnt_wght_100">Market-making for the pegged asset pairs, volatility protection in high-risk markets</div>
-              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://testnet.rivera.money/', '_blank')">Invest Now</button></div>
+              <div class="mb-3"><button class="btn marketMakingBtn marketMakingBtnHvr" onclick="window.open('https://app.rivera.money/', '_blank')">Invest Now</button></div>
             </div>
           </div>
 
