--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             data-animation-delay="2s"
           >
           <div class="mt_4_neg">
-          <button class="marketMakingBtn marketMakingBtnHvr pddng_4" style="cursor: pointer;" onclick="window.open('https://app.rivera.money/', '_blank')">Launch Mainnet</button>
+          <button class="marketMakingBtn marketMakingBtnHvr pddng_4" style="cursor: pointer;" onclick="window.open('https://app.rivera.money/', '_blank')">Launch App</button>
         </div>
         </li>
             
@@ -319,7 +319,7 @@
                     </button> -->
                     <button type="submit" name="submit2"  class="btn btn-default content-popup min_200" onclick="window.open('https://app.rivera.money/', '_blank')">
                       <!-- <img src="https://em-content.zobj.net/source/microsoft-teams/363/rocket_1f680.png">  -->
-                      Launch Mainnet
+                      Launch App
                     </button>
                   </div>
                   </div>
