--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                       <img class="wdth_45" src="/assets/images/tvlCircle.svg" />
                     </div>
                     <div class="mlr_15_25"> <div class="fnt_14">Total Value Locked</div>
-                    <div class="tvl_color fnt_600"  id="tvlData">$0</div></div>
+                    <div class="tvl_color fnt_600"  id="tvlData">-</div></div>
                     </div>
                    
                   </div>
