--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ aria-hidden="true">
         
 
 
-        fetch('https://api.llama.fi/tvl/rivera-money') 
+        fetch('https://api.rivera.money/vaults/stats') 
   .then(response => { 
     if (response.ok) { 
       return response.json(); // Parse the response data as JSON 
@@ -969,8 +969,9 @@ aria-hidden="true">
     } 
   }) 
   .then(data => { 
+    const sum = data.reduce((accumulator, currentValue) => accumulator + Number(currentValue.tvlUSD), 0);
     // Process the response data here 
-    document.getElementById('tvlData').innerHTML = '$' + data.toFixed(2);
+    document.getElementById('tvlData').innerHTML = '$' + sum.toFixed(2);
     console.log("logging dat",data); // Example: Logging the data to the console 
   }) 
   .catch(error => { 
